--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
+<p>My <a href="20191217-CV.pdf" target="_blank">CV</a> and <a href="20191220-CV-extended.pdf" target="_blank">Résumé</a></p>
 </body>
 </html>
