--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!DOCTYPE html>
 <html>
-<body>
-<h1>Hello World</h1>
-<p>My <a href="20191217-CV.pdf" target="_blank">CV</a> and <a href="20191220-CV-extended.pdf" target="_blank">Résumé</a></p>
-</body>
+	<head>
+		<title>Hello World</title>
+	</head>
+	<body>
+		<h1>Hello World</h1>
+		<p>My <a href="20191217-CV.pdf" target="_blank">CV</a> and <a href="20191220-CV-extended.pdf" target="_blank">Résumé</a></p>
+	</body>
 </html>
