--- a/index.html
+++ b/index.html
@@ -5,6 +5,6 @@
 	</head>
 	<body>
 		<h1>Hello World</h1>
-		<p>My <a href="20191217-CV.pdf" target="_blank">CV</a> and <a href="20191220-CV-extended.pdf" target="_blank">Résumé</a></p>
+		<p>My <a href="20191217-CV.pdf" target="_blank">CV</a> and <a href="20191220-CV-extended.pdf" target="_blank">Résumé</a>.</p>
 	</body>
 </html>
